cmake_minimum_required(VERSION 4.1)
project(C)

set(CMAKE_C_STANDARD 11)

add_executable(main src/main.c
        src/test.c
        src/week1/helloWorld.c
        src/week2/2026031801_이동주.c
        src/week2/2026031802_이동주.c
        src/week2/2026031803_이동주.c
        src/week2/2026031804_이동주.c
        src/week2/2026031805_이동주.c
)
